added smoking data and guidance.
